syntax = "proto3";
option go_package = "pkg/proto";
package proto;

message NodeConfig {
    string guid = 1;
    string IpAddr = 3;
    string Network = 4;
    enum State {
        Unknown = 0;
        Alive = 1;
        Unresponsive = 2;
    }
    State state = 5;
}

service Node {
    // Client to leader registration
    rpc Register (ConnectionSyn) returns (ConnectionAck) {
    }
}

message ConnectionSyn {
    NodeConfig node = 1;
}

message ConnectionAck {
    NodeConfig node = 1;
    enum State {
        Negotiating = 0;
        Known = 1;
    }
    State state = 2;
}
